# dj-angles

./: .all-contributorsrc  .gitignore  .readthedocs.yml  CHANGELOG.md  DEVELOPING.md  LICENSE  README.md  TODO.md  benchmark_conditionals.py  conftest.py  justfile  pyproject.toml
.github/workflows/: checks.yml  publish.yml
benchmarks/: test_benchmarks.py  test_micro.py
benchmarks/templates/: complex_angles.html  plain.html  simple_angles.html
docs/source/: changelog.md  components.md  conf.py  error-boundaries.md  examples.md  index.md  inline-expressions.md  installation.md  mappers.md  settings.md  tag-attributes.md  tag-elements.md
docs/source/custom-elements/: ajax-form.md
docs/source/filters/: dateformat.md
docs/source/integrations/: django-bird.md  django-components.md  django-compressor.md  django-template-partials.md  django-viewcomponent.md
docs/source/middlewares/: request-ajax.md  request-method.md
docs/source/template-tags/: call.md  model.md  template.md  view.md
example/: manage.py  pyproject.toml
example/book/: apps.py  models.py
example/project/: settings.py  urls.py
example/templates/bird/: button.html
example/www/: urls.py  views.py
example/www/components/: button.html  button.py  component_button.py
example/www/components/viewcomponent_button/: viewcomponent_button.html  viewcomponent_button.py
example/www/templates/: _button.html
example/www/templates/www/: base.html  bird.html  django-bird.html  django-components.html  django-viewcomponent.html  error-boundaries.html  include.html  index.html  partials.html  slots.html  template-partials.html  view-include.html  view.html
example/www/templates/www/components/: error-fallback.html  include-bad-sub.html  include-bad.html  include-shadow.html  include-slot.html  include.html  shadow-include.html
src/dj_angles/: __init__.py  attributes.py  evaluator.py  exceptions.py  html.py  htmls.py  mappers.py  middleware.py  modules.py  quote_utils.py  regex_replacer.py  replacer.py  settings.py  strings.py  tags.py  template_loader.py  templates.py  tokenizer.py  wrapper.py
src/dj_angles/caseconverter/: __init__.py  boundaries.py  caseconverter.py  kebab.py
src/dj_angles/mappers/: __init__.py  angles.py  django.py  include.py  mapper.py  thirdparty.py  utils.py
src/dj_angles/regex_replacer/: __init__.py  attribute_replacer.py  django_tag_replacer.py  objects.py  tag_replacer.py
src/dj_angles/replacers/: __init__.py  attribute_replacer_ast.py  attribute_replacer_hybrid.py  attributes.py  comments.py  conditional_converter.py  objects.py  tags.py  variables.py
src/dj_angles/replacers/attributes/: __init__.py  conditionals.py  elements.py  loops.py  values.py
src/dj_angles/static/dj_angles/js/: ajax-form.js
src/dj_angles/templates/dj_angles/: scripts.html
src/dj_angles/templatetags/: call.py  dj_angles.py  model.py  template.py  view.py
tests/: settings.py
tests/dj_angles/: html.py  test_exceptions.py  test_htmls.py  test_template_loader.py
tests/dj_angles/attributes/: test_attributes.py  test_attributes_coverage.py
tests/dj_angles/caseconverters/: test_boundaries.py  test_caseconverter.py  test_kebab.py  test_kebabify.py
tests/dj_angles/evaluator/: test_caster.py  test_evaluated_function.py  test_parse_function_string.py
tests/dj_angles/filters/: test_dateformat.py
tests/dj_angles/mappers/: test_map_block.py  test_map_css.py  test_map_extends.py  test_map_image.py  test_map_include.py
tests/dj_angles/mappers/angles/: test_map_call.py  test_map_form.py  test_map_model.py
tests/dj_angles/mappers/django/: test_map_autoescape.py  test_map_block.py  test_map_css.py  test_map_extends.py  test_map_image.py  test_map_include.py
tests/dj_angles/mappers/include/: test_get_include_template_file.py  test_map_include.py  test_map_include_coverage.py
tests/dj_angles/mappers/mapper/: test_get_tag_map.py
tests/dj_angles/middleware/: test_request_ajax.py  test_request_method.py
tests/dj_angles/regex_replacer/: test_convert_template.py  test_django_tag_replacer.py  test_get_attribute_replacements.py  test_get_replacements.py  test_get_tag_replacements.py  test_replace_django_template_tags.py  test_replace_django_templatetags.py
tests/dj_angles/regex_replacer/replace_django_template_tags/: test_error_boundary.py
tests/dj_angles/replacer/: test_get_include_replacement.py  test_get_replacements.py  test_replace_django_templatetags.py
tests/dj_angles/replacers/: test_attribute_replacer_ast.py  test_comments.py  test_convert_template.py  test_mask_comments.py  test_objects.py
tests/dj_angles/replacers/attributes/: test_element.py  test_replace_attributes.py  test_replace_loops.py  test_replace_values.py
tests/dj_angles/replacers/tags/: test_error_boundary.py  test_replace_tags.py
tests/dj_angles/replacers/variables/: test_replace_variables.py  test_replace_variables_coverage.py
tests/dj_angles/settings/: test_get_setting.py  test_get_template_loaders.py
tests/dj_angles/strings/: test_quote_utils_coverage.py  test_replace_newlines.py
tests/dj_angles/tags/: __init__.py  test_tag.py
tests/dj_angles/templatetags/: test_dj_angles.py
tests/dj_angles/templatetags/call/: test_do_call.py  test_render.py
tests/dj_angles/templatetags/model/: test_do_model.py  test_overlap.py  test_render.py
tests/dj_angles/templatetags/template/: test_errors.py  test_render.py
tests/dj_angles/templatetags/view/: test_urls.py  test_view.py
tests/dj_angles/tokenizer/: test_yield_tokens.py
tests/dj_angles_loader/: test_get_include_replacement.py  test_get_replacements.py  test_replace_strings.py
tests/templates/: _underscore.html  invalid_variable.html  slot.html
tests/templates/components/: _underscore.html
