[project]
name = "dj-angles"
authors = [
  {name = "Adam Hill", email = "adam@adamghill.com"}
]
version = "0.6.0"
description = "Adds more bracket angles to Django templates </>"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = [
  "django",
  "html",
  "brackets"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "django"
]

[project.urls]
Homepage = "https://github.com/adamghill/dj-angles"
Documentation = "https://github.com/adamghill/dj-angles"
Repository = "https://github.com/adamghill/dj-angles.git"
Issues = "https://github.com/adamghill/dj-angles/discussions"
Changelog = "https://github.com/adamghill/dj-angles/blob/master/CHANGELOG.md"

[project.optional-dependencies]
docs = [
  "sphinx",
  "linkify-it-py",
  "myst-parser",
  "sphinx-copybutton",
  "furo",
  "sphinx-autobuild",
  "sphinx-inline-tabs",
  "sphinx-design",
  "sphinx-autoapi",
  "toml",
  "types-toml"
]

[tool.uv]
dev-dependencies = [
  "pytest<9",
  "pytest-django",
  "pytest-cov",
  "mypy"
]

[tool.ruff]
src = ["src"]
exclude = []
target-version = "py38"
line-length = 120
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore unused variables
  "F841",
   # Ignore exception strings
  "EM101", "EM102",
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["dj_angles"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "ARG001"]

[tool.pytest.ini_options]
addopts = "--quiet --failed-first -p no:warnings"
testpaths = [
    "tests"
]
markers = [
    "slow: marks tests as slow",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
sort = "cover"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"