[project]
name = "dj-angles"
authors = [
  {name = "Adam Hill", email = "adam@adamghill.com"}
]
version = "0.25.0"
description = "Add more bracket angles to Django templates </>"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = [
  "Django",
  "HTML",
  "brackets",
  "Django Template Language",
  "Django Template Partials",
  "Component Library",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Django",
  "Framework :: Django :: 4",
  "Framework :: Django :: 5",
  "Framework :: Django :: 6",
]
dependencies = [
  "django >= 0",
  "minestrone >= 0.9.0",
]

[project.urls]
Homepage = "https://dj-angles.adamghill.com"
Documentation = "https://dj-angles.adamghill.com"
Repository = "https://github.com/adamghill/dj-angles.git"
Issues = "https://github.com/adamghill/dj-angles/discussions"
Changelog = "https://dj-angles.adamghill.com/en/latest/changelog.html"

[dependency-groups]
dev = [
    "pytest < 9",
    "pytest-django >= 0",
    "pytest-cov >= 0",
    "ty >= 0",
    "sphinx-autobuild >= 2021.3.14",
    "coverage[toml] >= 6",
    "typing_extensions >= 4; python_version < '3.12'",
    "pluggy>=1.6.0",  # fixes syntax warning in 3.14
]
docs = [
    "Sphinx >= 4.3.2",
    "linkify-it-py >= 1.0.3",
    "myst-parser >= 0.16.1",
    "furo >= 2021.11.23",
    "sphinx-copybutton >= 0.4.0",
    "toml",
    "attrs >= 21.4.0",
    "sphinx-autobuild >= 0",
    "sphinx-inline-tabs >= 0",
    "sphinx-design >= 0",
    "sphinx-autoapi >= 0",
]

[project.optional-dependencies]
bird = [
  "django-bird >= 0",
]
template-partials = [
  "django-template-partials >= 0",
]
components = [
  "django-components >= 0",
]

[tool.ruff]
src = ["src"]
exclude = []
target-version = "py310"
line-length = 120
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore unused variables
  "F841",
   # Ignore exception strings
  "EM101", "EM102",
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["dj_angles"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "ARG001"]

[tool.pytest]
addopts = [
    "--quiet",
    "--failed-first",
    "-p no:warnings",
    "--no-migrations",
]
testpaths = [
    "tests"
]
markers = [
    "slow: marks tests as slow",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
sort = "cover"

[tool.ty.environment]
root = ["src"]

[tool.ty.src]
exclude = ["tests", "example", "docs"]

[tool.uv.workspace]
members = [
    "example",
    ".",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
